--- a/user/package.json
+++ b/user/package.json
@@ -27,11 +27,13 @@
     "@nestjs/microservices": "^7.4.4",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-fastify": "^7.4.4",
+    "@nestjs/swagger": "^4.6.1",
     "@nestjs/typeorm": "^7.1.4",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "fastify-helmet": "^5.0.3",
+    "fastify-swagger": "^3.4.0",
     "nestjs-fastify-rate-limiter": "^1.0.2",
     "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
