--- a/auth-grpc/package.json
+++ b/auth-grpc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user",
+  "name": "auth-grpc",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -13,7 +13,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:dev:clean": "rm -rf dist && clear && nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,30 +24,17 @@
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/microservices": "^7.4.4",
+    "@nestjs/microservices": "^7.5.1",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/platform-fastify": "^7.4.4",
-    "@nestjs/swagger": "^4.6.1",
-    "@nestjs/typeorm": "^7.1.4",
-    "bcrypt": "^5.0.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "fastify-helmet": "^5.0.3",
-    "fastify-swagger": "^3.4.0",
     "grpc": "^1.24.4",
-    "nestjs-fastify-rate-limiter": "^1.0.2",
-    "pg": "^8.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "typeorm": "^0.2.28",
-    "uuid": "^8.3.1"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
