--- a/auth-grpc/package.json
+++ b/auth-grpc/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.5.1",
     "@nestjs/platform-express": "^7.0.0",
+    "bcrypt": "^5.0.0",
     "grpc": "^1.24.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
