--- a/auth-grpc/package.json
+++ b/auth-grpc/package.json
@@ -26,11 +26,16 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.5.1",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
+    "class-validator": "^0.12.2",
     "grpc": "^1.24.4",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
