--- a/auth-grpc/package.json
+++ b/auth-grpc/package.json
@@ -24,12 +24,17 @@
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/microservices": "^7.5.1",
+    "@nestjs/passport": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
     "class-validator": "^0.12.2",
     "grpc": "^1.24.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -44,6 +49,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
     "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
