--- a/auth-grpc/package.json
+++ b/auth-grpc/package.json
@@ -28,9 +28,12 @@
     "@nestjs/microservices": "^7.5.1",
     "@nestjs/passport": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-fastify": "^7.5.5",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "fastify-helmet": "^5.0.3",
     "grpc": "^1.24.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
